add update to other pages

--- a/src/business.html
+++ b/src/business.html
@@ -78,13 +78,13 @@
           </a>
           <ul class="nav-list" role="navigation">
             <li class="nav-list__item">
-              <a href="/works" class="nav-list__link">How it works</a>
+              <a href="/works" class="nav-list__link nav-list__link--mobile">How it works</a>
             </li>
             <li class="nav-list__item">
-              <a href="/business" class="nav-list__link nav-list__link--active">I'm a business</a>
+              <a href="/business" class="nav-list__link nav-list__link--active nav-list__link--mobile">I'm a business</a>
             </li>
             <li class="nav-list__item">
-              <a href="/contact" class="nav-list__link">Contact us</a>
+              <a href="/contact" class="nav-list__link nav-list__link--mobile">Contact us</a>
             </li>
           </ul>
           <div class="portal">
