update works and home pages

--- a/src/index.html
+++ b/src/index.html
@@ -106,10 +106,10 @@
         <h2 class="howItWorks-title">How Openpay works</h2>
         <div class="block_howItWorks_flex">
           <div class="block_howItWorks">
-            <img src="images/home/dress-icon.svg" alt="Dress Icon" loading="lazy"/>
-            <h3 class="block_howItWorks_title">1. Shop online</h3>
+            <img src="images/home/basket.svg" alt="Basket Icon" class="block_howItWorks__basket-img" loading="lazy"/>
+            <h3 class="block_howItWorks_title">1. Shop</h3>
             <p class="block_howItWorks_text">
-              Look for the Openpay logo on your favourite online retailers.<br>Choose Openpay at the checkout.
+              Add items to your basket,<br>and select Openpay<br> at checkout.
             </p>
           </div>
           <div class="block_howItWorks">
@@ -123,7 +123,14 @@
             <img src="images/home/calendar.svg" alt="Calendar Icon" class="block_howItWorks__calendar-img" loading="lazy"/>
             <h3 class="block_howItWorks_title">3. Select your plan</h3>
             <p class="block_howItWorks_text">
-              Choose between a two or three month plan, and make your first payment today.
+              Make your first payment today. Adjust your next instalment date for more flexibility.
+            </p>
+          </div>
+          <div class="block_howItWorks">
+            <img src="images/home/hourglass.svg" alt="Hourglass Icon" class="block_howItWorks__calendar-img" loading="lazy"/>
+            <h3 class="block_howItWorks_title">4. Pay over time</h3>
+            <p class="block_howItWorks_text">
+              Your order is shipped immediately. We’ll take your payments automatically each month.
             </p>
           </div>
         </div>
