--- a/src/works.html
+++ b/src/works.html
@@ -132,16 +132,15 @@
         <div class="works__item">
           <div class="works__img-wrapper">
             <img
-              src="./images/works/dress.svg"
-              alt="Dress Icon"
+              src="./images/works/basket.svg"
+              alt="Basket Icon"
               class="works__img"
               loading="lazy"
             />
           </div>
-          <h4 class="works__item-title">1. Shop online</h4>
+          <h4 class="works__item-title">1. Shop</h4>
           <p class="works__item-descr">
-            Look for the Openpay logo on your favourite online websites. Choose
-            Openpay at the checkout.
+            Add items to your basket, and select Openpay at checkout.
           </p>
         </div>
 
@@ -156,8 +155,7 @@
           </div>
           <h4 class="works__item-title">2. Sign up</h4>
           <p class="works__item-descr">
-            Get approved by Openpay in just 90 seconds with ID and a soft credit
-            check.
+            Get approved by Openpay in just 90 seconds with ID and a soft credit check.
           </p>
         </div>
 
@@ -172,10 +170,22 @@
           </div>
           <h4 class="works__item-title">3. Select your plan</h4>
           <p class="works__item-descr">
-            Choose between a two or three month plan, and make your first
-            payment today. The remainder will be debited from your chosen card
-            in equal, monthly payments on the dates you choose. There’s no need
-            to wait, your order will be shipped right away.
+            Make your first payment today. Adjust your next instalment date for more flexibility.
+          </p>
+        </div>
+
+        <div class="works__item">
+          <div class="works__img-wrapper">
+            <img
+              src="./images/works/hourglass.svg"
+              alt="Hourglass Icon"
+              class="works__img"
+              loading="lazy"
+            />
+          </div>
+          <h4 class="works__item-title">4. Pay over time</h4>
+          <p class="works__item-descr">
+            Your order is shipped immediately. We’ll take your payments automatically each month.
           </p>
         </div>
       </div>
