update meta and faq

--- a/src/faq.html
+++ b/src/faq.html
@@ -147,7 +147,7 @@
               <p class="faq-qa-text">
                 Openpay is a payment solution that enables customers to spread
                 the cost of a purchase in equal monthly instalments. Pay over
-                two or three months depending on the merchant) with no hidden
+                two or three months depending on the merchant with no hidden
                 fees and no interest, ever.
               </p>
             </div>
@@ -200,7 +200,7 @@
               </h4>
               <p class="faq-qa-text">
                 There are no fees or interest, however if you miss a payment a
-                late fee of £7.50 may be charges. Late charges are capped at £15
+                late fee of £7.50 may be charged. Late charges are capped at £15
                 per plan.
               </p>
             </div>
@@ -327,7 +327,7 @@
                 If you want to make a payment before a scheduled payment due
                 date, you can make a payment through your account or call
                 customer support on
-                <a href="tel:0800 193 0553">0800 193 0553</a> to process a
+                <a href="tel:0800 048 9007">0800 048 9007</a> to process a
                 payment.
               </p>
             </div>
@@ -348,7 +348,7 @@
               <p class="faq-qa-text">
                 You can update your card details through your Openpay account.
                 If you’d rather talk to our team, you can contact us on
-                <a href="tel:0800 193 0553">0800 193 0553</a> during business
+                <a href="tel:0800 048 9007">0800 048 9007</a> during business
                 hours (Monday to Friday, 9am-5.30pm GMT).
               </p>
               <p class="faq-qa-text">
@@ -369,7 +369,7 @@
               <p class="faq-qa-text">
                 Yes, early payments can be made via your account or with our
                 customer service team by calling customer support on
-                <a href="tel:0800 193 0553">0800 193 0553</a>. There is no
+                <a href="tel:0800 048 9007">0800 048 9007</a>. There is no
                 charge for paying early.
               </p>
             </div>
@@ -402,7 +402,7 @@
                 We want to ensure that you’re able to make your repayments.
                 Don’t wait until a payment fails, helping you with your
                 budgeting is important to us. Reach out to us on
-                <a href="tel:0800 193 0553">0800 193 0553</a> or via email to
+                <a href="tel:0800 048 9007">0800 048 9007</a> or via email to
                 <a href="mailto:support@myopenpay.co.uk" class="faq-link"
                   >support@myopenpay.co.uk</a
                 >
@@ -415,7 +415,7 @@
               </h4>
               <p class="faq-qa-text">
                 Reach out to us on
-                <a href="tel:0800 193 0553">0800 193 0553</a> or via email to
+                <a href="tel:0800 048 9007">0800 048 9007</a> or via email to
                 <a href="mailto:support@myopenpay.co.uk" class="faq-link"
                   >support@myopenpay.co.uk</a
                 >
@@ -492,7 +492,7 @@
                 <a href="mailto:support@myopenpay.co.uk" class="faq-link"
                   >support@myopenpay.co.uk</a
                 >
-                or call us on <a href="tel:0800 193 0553">0800 193 0553</a>.
+                or call us on <a href="tel:0800 048 9007">0800 048 9007</a>.
               </p>
             </div>
           </div>
