--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Openpay Welcome</title>
-  <meta name="description" content="Openpay Welcome to a smarter way to pay" />
-  <meta property="og:image" content="https://www.myopenpay.co.uk/images/opengraph/opengraph-home.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <title>Openpay UK | A Smarter Way To Pay</title>
+  <meta name="description" content="Our flexible interest-free plans mean you can shop on your own terms and split your payments over time." >
+  <meta property="og:image" content="https://www.myopenpay.co.uk/images/opengraph/opengraph-home.jpg" >
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
