fix typo in the footer

--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -252,7 +252,7 @@
         </p>
         <p class="copyright__text">
           Openpay UK Limited is a company registered in England and Wales
-          (Company Number 11422596) with it's registered office at 49 Greek St,
+          (Company Number 11422596) with its registered office at 49 Greek St,
           London, United Kingdom, W1D4EG
         </p>
       </footer>
