--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
         © 2019 Openpay
       </p>
       <p class="copyright__text">
-        Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's registered office at 49 Greek St, London, United Kingdom, W1D4EG
+        Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with its registered office at 49 Greek St, London, United Kingdom, W1D4EG
       </p>
     </footer>
   </div>
