Update lead fields and text

--- a/src/got-in-touch.html
+++ b/src/got-in-touch.html
@@ -105,7 +105,13 @@
     </section>
 
     <section class="get-in-touch">
-        <div class="thankyou"><em>Thank you,</em> we'll be in touch.</div>
+        <div class="thankyou">
+            <em>Thank you for your interest.</em>
+
+            <p>An Openpay rep will contact you soon.</p>
+            
+            <p>If you require further assistance or have urgent enquiries please contact customer support at <a href="mailto:support@myopenpay.co.uk">support@myopenpay.co.uk</a> on via phone on <a href="tel:08001930553">0800 048 9007</a> between 9:00am and 5:30pm, 7 days a week.</p>
+        </div>
     </section>
 
     <div class="footer-wrap block-wap">
