--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -107,12 +107,13 @@
     <section class="get-in-touch">
       <form class="gform get-in-touch__form" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
         <input type=hidden name="oid" value="00D7F000005mScl">
+        <input type=hidden name="lead_source" value="Website_UK">
         <input type=hidden name="retURL" value="https://www.myopenpay.co.uk/got-in-touch">
       
         <div class="form-elements">
           <div class="form__container">
             <label class="form__label"
-              >First name *
+              >First Name *
               <input
                 class="form__input"
                 type="text"
@@ -121,13 +122,13 @@
               />
             </label>
             <label class="form__label"
-              >Last name *
+              >Last Name *
               <input class="form__input" type="text" name="last_name" required />
             </label>
           </div>
           <div class="form__container">
             <label class="form__label"
-              >Email *
+              >Business Email *
               <input
                 class="form__input"
                 type="email"
@@ -143,7 +144,7 @@
           </div>
           <div class="form__container">
             <label class="form__label"
-              >Company name *
+              >Company *
               <input class="form__input" type="text" name="company" required />
             </label>
             <label class="form__label form__label--select"
@@ -152,7 +153,9 @@
                 <option value="" disabled>Select a country</option>
                 <option value="GB" selected>United Kingdom</option>
                 <option value="AU">Australia</option>
+                <option value="NZ">New Zealand</option>
                 <option value="US">United States</option>
+                <option value="">Other</option>
               </select>
             </label>
           </div>
