delete form from the homepage and landing

--- a/src/index.html
+++ b/src/index.html
@@ -139,9 +139,8 @@
 
   <div class="feedback-wrap block-wap">
     <section class="feedback block-child-wrap">
-      <div class="feedback_item">
         <h2 class="feedback_title">You’re a business? Let’s chat.</h2>
-        <p class="feedback_text feedback_text--height">
+        <p class="feedback_text">
           We’re in the business of offering your customers a smarter way to
           pay. Do you need a risk-free and seamless payment solution that
           increases sales and conversions?
@@ -149,29 +148,6 @@
         <div class="feedback_btn_block">
           <a href="/business" class="feedback_btn_block_link">Learn more</a>
         </div>
-      </div>
-
-      <div class="feedback_item">
-        <h2 class="feedback_title feedback_title--padding">Shop smarter.</h2>
-        <div class="feedback__Interested">
-          <label class="feedback_text feedback_text--signup" for="signup">
-            Interested? Sign up below to learn more.
-          </label>
-        </div>
-        <form class="gform feedback_form" method="POST"
-          action="https://script.google.com/macros/s/AKfycbynpzfHhC7WiHKCTa9a4leLQKnJUgkkpWe-QMT1/exec">
-          <div class="form-elements">
-            <input id="signup" class="feedback_input" type="email" name="email" placeholder="Your email address"
-              maxlength="254" required />
-            <button class="feedback_btn_block_link" type="submit">
-              Sign up
-            </button>
-          </div>
-          <div class="thankyou">
-            <h2><em>Thank you,</em> we'll be in touch.</h2>
-          </div>
-        </form>
-      </div>
     </section>
   </div>
 
