--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -39,34 +39,6 @@
     </div>
   </div>
 
-  <section class="signup">
-    <div class="signup__wrapper block-child-wrap">
-      <div class="signup__item">
-        <h2 class="signup__title">
-          We’ve partnered with Openpay to bring you more ways to pay, <div class="signup__subtitle">on your terms.</div>
-        </h2>
-      </div>
-      <div class="signup__item signup__item--form">
-        <label class="signup__form-title" for="signup">
-          Add your email address to receive the latest news and info from Openpay.
-        </label>
-        <form class="gform signup__form" method="POST"
-          action="https://script.google.com/macros/s/AKfycbyrox_EtmkWyFRhrKAeRz1rzyl_p6-t63XE1rOe/exec">
-          <div class="form-elements">
-            <input id="signup" class="signup__input" type="email" name="email" placeholder="Your email address"
-              maxlength="254" required />
-            <button class="signup__submit" type="submit">
-              Sign up
-            </button>
-          </div>
-          <div class="thankyou">
-            <em>Thank you,</em> we'll be in touch.
-          </div>
-        </form>
-      </div>
-    </div>
-  </section>
-
   <div class="works-wrap block-wap">
     <div class="works">
       <h2 class="works-title">
@@ -74,7 +46,7 @@
       </h2>
       <div class="work-list">
         <div class="work-item">
-          <img src="./images/home/dress-icon.svg" alt="Dress Icon" class="work-item__icon work-item__icon_1" loading="lazy"/>
+          <img src="./images/home/basket.svg" alt="Basket Icon" class="work-item__icon work-item__icon_1" loading="lazy"/>
           <h3 class="work-item__title">
             1. Shop online
           </h3>
