Adding Job Title and more coutnries

--- a/src/got-in-touch.html
+++ b/src/got-in-touch.html
@@ -110,7 +110,7 @@
 
             <p>An Openpay rep will contact you soon.</p>
             
-            <p>If you require further assistance or have urgent enquiries please contact customer support at <a href="mailto:support@myopenpay.co.uk">support@myopenpay.co.uk</a> on via phone on <a href="tel:08001930553">0800 048 9007</a> between 9:00am and 5:30pm, 7 days a week.</p>
+            <p>If you require further assistance or have urgent enquiries please contact customer support at <a href="mailto:support@myopenpay.co.uk">support@myopenpay.co.uk</a> or via phone on <a href="tel:08001930553">0800 048 9007</a> between 9:00am and 5:30pm, 7 days a week.</p>
         </div>
     </section>
 
