Add GBP as lead currency

--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -78,6 +78,7 @@
             action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
             <input type=hidden name="oid" value="00D7F000005mScl">
             <input type=hidden name="lead_source" value="Website_UK">
+            <input type=hidden name="currency" value="GBP">
             <input type=hidden name="retURL" value="https://www.myopenpay.co.uk/got-in-touch">
 
             <div class="form-elements">
