--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -110,9 +110,13 @@
                     <label class="form__label form__label--select">Country
                         <select class="form__input form__input--select" name="country_code">
                             <option value="" disabled>Select a country</option>
+                            <option value="AL">Albania</option>
+                            <option value="AD">Andorra</option>
                             <option value="AU">Australia</option>
                             <option value="AT">Austria</option>
+                            <option value="BY">Belarus</option>
                             <option value="BE">Belgium</option>
+                            <option value="BA">Bosnia and Herzegovina</option>
                             <option value="BG">Bulgaria</option>
                             <option value="HR">Croatia</option>
                             <option value="CY">Cyprus</option>
@@ -124,21 +128,34 @@
                             <option value="DE">Germany</option>
                             <option value="GR">Greece</option>
                             <option value="HU">Hungary</option>
+                            <option value="IS">Iceland</option>
                             <option value="IE">Ireland</option>
                             <option value="IT">Italy</option>
                             <option value="LV">Latvia</option>
+                            <option value="LI">Liechtenstein</option>
                             <option value="LT">Lithuania</option>
                             <option value="LU">Luxembourg</option>
+                            <option value="MK">Macedonia</option>
                             <option value="MT">Malta</option>
+                            <option value="MD">Moldova</option>
+                            <option value="MC">Monaco</option>
+                            <option value="ME">Montenegro</option>
                             <option value="NL">Netherlands</option>
                             <option value="NZ">New Zealand</option>
+                            <option value="NO">Norway</option>
                             <option value="PL">Poland</option>
                             <option value="PT">Portugal</option>
                             <option value="RO">Romania</option>
+                            <option value="RU">Russia</option>
+                            <option value="SM">San Marino</option>
+                            <option value="RS">Serbia</option>
                             <option value="SK">Slovakia</option>
                             <option value="SI">Slovenia</option>
                             <option value="ES">Spain</option>
                             <option value="SE">Sweden</option>
+                            <option value="CH">Switzerland</option>
+                            <option value="TR">Turkey</option>
+                            <option value="UA">Ukraine</option>
                             <option value="GB" selected>United Kingdom</option>
                             <option value="US">United States</option>
                             <option value="">Other</option>
