--- a/src/business.html
+++ b/src/business.html
@@ -284,7 +284,10 @@
               <a href="/faq" class="paragraphSpec-3">FAQ</a>
             </li>
             <li>
-              <a href="./legal" class="paragraphSpec-3">Legal</a>
+              <a href="/legal" class="paragraphSpec-3">Legal</a>
+            </li>
+            <li>
+              <a href="/pci" class="paragraphSpec-3">PCI Data Security</a>
             </li>
           </ul>
         </nav>
