--- a/src/faq.html
+++ b/src/faq.html
@@ -519,6 +519,9 @@
             <li class="link-list-item">
               <a href="./legal" class="paragraphSpec-3">Legal</a>
             </li>
+            <li>
+              <a href="./pci" class="paragraphSpec-3">PCI Data Security</a>
+            </li>
           </ul>
         </nav>
         <a href="/">
