--- a/src/legal.html
+++ b/src/legal.html
@@ -177,6 +177,9 @@
             <li>
               <a href="./legal" class="paragraphSpec-3">Legal</a>
             </li>
+            <li>
+              <a href="./pci" class="paragraphSpec-3">PCI Data Security</a>
+            </li>
           </ul>
         </nav>
         <a href="/">
