fix faq and works pages footer

--- a/src/faq.html
+++ b/src/faq.html
@@ -504,24 +504,24 @@
       <footer class="footer block-child-wrap">
         <nav class="nav-footer">
           <ul class="footer-nav-list">
-            <li class="link-list-item">
+            <li>
               <a href="/works" class="paragraphSpec-3">How it works</a>
             </li>
-            <li class="link-list-item">
+            <li>
               <a href="/business" class="paragraphSpec-3">I’m a business</a>
             </li>
-            <li class="link-list-item">
+            <li>
               <a href="/contact" class="paragraphSpec-3">Contact us</a>
             </li>
-            <li class="link-list-item">
+            <li>
               <a href="/faq" class="paragraphSpec-3">FAQ</a>
             </li>
-            <li class="link-list-item">
+            <li>
               <a href="./legal" class="paragraphSpec-3">Legal</a>
             </li>
             <li>
-              <a href="./pci" class="paragraphSpec-3">PCI Data Security</a>
-            </li>
+              <a href="/pci" class="paragraphSpec-3">PCI Data Security</a>
+            </li
           </ul>
         </nav>
         <a href="/">
