--- a/src/error.html
+++ b/src/error.html
@@ -162,7 +162,7 @@
 
     <script
       defer
-      src="https://www.myopenpay.co.uk/scripts/main.min.js"
+      src="https://www.myopenpay.co.uk/scripts/min/main.js"
     ></script>
   </body>
 </html>
