--- a/src/legal.html
+++ b/src/legal.html
@@ -29,36 +29,20 @@
       property="og:image"
       content="https://www.myopenpay.co.uk/images/legal/legal.jpg"
     />
-    <!-- Google Tag Manager -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-10"></script>
     <script>
-      (function(w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-          "gtm.start": new Date().getTime(),
-          event: "gtm.js"
-        });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-NH9RBKG");
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-84225706-10');
     </script>
+
     <link rel="stylesheet" href="./css/legal.css?20190517" />
   </head>
 
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-NH9RBKG"
-        height="0"
-        width="0"
-        style="display:none;visibility:hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <div class="header-wrap block-wap">
       <header class="header">
         <div class="trigger-menu">
@@ -213,6 +197,6 @@
       <button class="cookie-popup__button">Accept</button>
     </div>
 
-    <script defer src="./scripts/main.min.js"></script>
+    <script defer src="./scripts/min/main.js"></script>
   </body>
 </html>
