delete default form

--- a/src/index.html
+++ b/src/index.html
@@ -172,49 +172,6 @@
     </section>
   </div>
 
-  <style type="text/css">
-    #signup input ~ label.wrap {
-        white-space: pre-wrap;
-    }
-</style>
-<form name="signup" id="signup" action="https://email.myopenpay.co.uk/signup.ashx" method="post" autocomplete="off" onsubmit="return validate_signup(this, true)">
-<input type="hidden" name="userid" value="245455">
-<input type="hidden" name="SIG0b63c0a7f304988650e9e4a5ff78c47e948ca3d4a4c4cd2b93cd53936fb40eff" value="">
-<input type="hidden" name="addressbookid" value="1173024" />
-<input type="hidden" name="ReturnURL" value="">
-<input type="hidden" id="ci_consenturl" name="ci_consenturl" value="">
-<div>
-<label class="wrap" for="email">Email</label>
-<input type="text" name="email" id="email" required aria-required="true">
-</div>
-<p>
-<input type="submit" id="btnsubmit" name="btnsubmit" value="Subscribe">
-</p>
-</form>
-<script type="text/javascript">
-    var urlInput = document.getElementById("ci_consenturl");
-    if (urlInput != null && urlInput != 'undefined') {
-        urlInput.value = encodeURI(window.location.href);
-    }
-    function checkbox_Clicked(element) {
-        document.getElementById(element.id + "_unchecked").value = !element.checked;
-    }
-    function validate_signup(frm, showAlert) {
-        var emailAddress = frm.email.value;
-        var errorString = '';
-        if (emailAddress == '' || emailAddress.indexOf('@') == -1) {
-            errorString = 'Please enter your email address';
-        }
-        var isError = false;
-        if (errorString.length > 0) {
-            isError = true;
-            if (showAlert) alert(errorString);
-        }
-        return !isError;
-    }
-</script>
-
-
   <div class="footer-wrap block-wap">
     <footer class="footer block-child-wrap">
       <nav class="nav-footer">
@@ -258,7 +215,7 @@
     <button class="cookie-popup__button">Accept</button>
   </div>
 
-  <script defer src="./scripts/main.js"></script>
+  <!-- <script defer src="./scripts/main.js"></script> -->
   <script defer src="./scripts/min/main.js"></script>
 
 </body>
