update styles and form

--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
                   Interested? Sign up below to learn more.
                 </label>
               </div>
-                <form class="feedback_form" name="signup" id="signup" action="https://email.myopenpay.co.uk/signup.ashx" method="post" autocomplete="off" onsubmit="return preventRedirect()">
+                <form class="feedback_form" name="signup" id="signup" action="https://email.myopenpay.co.uk/signup.ashx" method="post" onsubmit="return showThanks()">
                   <input type="hidden" name="userid" value="245455">
                   <input type="hidden" name="SIG0b63c0a7f304988650e9e4a5ff78c47e948ca3d4a4c4cd2b93cd53936fb40eff" value="">
                   <input type="hidden" name="addressbookid" value="1173024" />
