update working days on the contact page

--- a/src/contact.html
+++ b/src/contact.html
@@ -134,7 +134,7 @@
             </p>
             <a href="tel:0800 048 9007" class="contact__link">0800 048 9007</a>
             <p class="contact__text_subtitle">
-              We're available 9am-5:30pm, 7 days a week.
+              We're available 9am - 5:30pm, Mon - Fri.
             </p>
           </div>
         </div>
