update form on th homepage

--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
               <h2 class="feedback_title feedback_title--padding">Shop smarter.</h2>
               <div class="feedback__Interested">
                 <label class="feedback_text feedback_text--signup" for="email">
-                  Interested? Sign up below to learn more.
+                  Interested? Register your email below to receive news from Openpay.
                 </label>
               </div>
                 <form class="feedback_form" name="signup" id="signup" action="https://email.myopenpay.co.uk/signup.ashx" method="post" onsubmit="return showThanks()">
@@ -161,7 +161,7 @@
                       <label class="feedback__checkbox-label" for="policy">I agree to receive email newsletters and promotional offers via email from Openpay about its products and services and I understand that I can change my preference at any time. Please read Openpay’s <a href="./docs/privacy-policy.pdf" target="_blank" class="feedback__checkbox-link">Privacy Policy</a> for more information.</label>
                     </div>
                     <button class="feedback_btn_block_link" type="submit" id="btnsubmit" name="btnsubmit">
-                      Sign up
+                      Register
                     </button>
                   </div>
                 </form>
