add cta section to the business page

--- a/src/business.html
+++ b/src/business.html
@@ -30,13 +30,18 @@
       content="https://www.myopenpay.co.uk/images/business/business_bg.jpg"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-10"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-10"
+    ></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
 
-      gtag('config', 'UA-84225706-10');
+      gtag('config', 'UA-84225706-10')
     </script>
 
     <link rel="stylesheet" href="./css/business.css?20190517" />
@@ -60,13 +65,21 @@
           </a>
           <ul class="nav-list" role="navigation">
             <li class="nav-list__item">
-              <a href="/works" class="nav-list__link nav-list__link--mobile">How it works</a>
+              <a href="/works" class="nav-list__link nav-list__link--mobile"
+                >How it works</a
+              >
             </li>
             <li class="nav-list__item">
-              <a href="/business" class="nav-list__link nav-list__link--active nav-list__link--mobile">I'm a business</a>
+              <a
+                href="/business"
+                class="nav-list__link nav-list__link--active nav-list__link--mobile"
+                >I'm a business</a
+              >
             </li>
             <li class="nav-list__item">
-              <a href="/contact" class="nav-list__link nav-list__link--mobile">Contact us</a>
+              <a href="/contact" class="nav-list__link nav-list__link--mobile"
+                >Contact us</a
+              >
             </li>
           </ul>
           <div class="portal">
@@ -97,6 +110,26 @@
           Open your eyes to a<br />smarter way to pay.
         </h1>
       </div>
+    </div>
+
+    <div class="cta-section block-wap">
+      <h2 class="cta-section__title">
+        Get fee-free for three
+      </h2>
+      <p class="cta-section__subtitle">
+        Sign up with Openpay today for
+        <span class="cta-section__subtitle--bold">3 months fee-free*</span>.
+      </p>
+      <p class="cta-section__terms">
+        *Terms & Conditions apply
+      </p>
+      <a
+        href="/get-in-touch"
+        target="_blank"
+        class="btn-primary whyOpenPay-btn"
+      >
+        Register today
+      </a>
     </div>
 
     <div class="whyOpenPay-wrap block-wap">
