change date on the get in touch page

--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -119,11 +119,11 @@
           >limited fee-free offer*.</span
         >
         <br />
-        Sign up as a merchant partner before 31 October and receive 3 months
+        Sign up as a merchant partner before 30 November and receive 3 months
         retailer fee free.
       </p>
       <p class="cta-section__terms">
-        *3 months retailer fee free when contract signed by 31st October 2019
+        *3 months retailer fee free when contract signed by 30th November 2019
         and integration live by 31st January 2020
       </p>
     </section>
